--- a/band_02/asche_im_wind/asche-im-wind.tex
+++ b/band_02/asche_im_wind/asche-im-wind.tex
@@ -20,7 +20,7 @@ Doch in vielen Nächten wird sie Opfer einer Besessenheit, sodass die Regenerati
 Ab da erleidet sie die vollen Auswirkungen des Schwelbrandes an ihrem Baum und wird zu einem rasenden Wesen aus Qualm.
 In diesem Zustand zieht sie durch die Lüfte und fährt auf nichtsahnende Bewohner des Svelltlandes herab.
 
-\vfill
+\zeichnung[0.38\textwidth]{Einleitung.jpg}
 
 Spätestens zum Morgengrauen würde die Besessenheit enden, doch oft ist \textbf{Venaya} vorher schon zerfallen und liegt als schnell neu keimender Schössling in ihrer eigenen Asche.
 Sie kehrt zu ihrem Tal zurück und hat nur wirre Erinnerungen an eine wüste graue Ebene.
@@ -36,28 +36,30 @@ Sie sind aber nicht verpflichtend.
 Sollten die Spielleiterin oder die Spieler weitere Ideen haben, können sie diese gerne hinzufügen.
 
 
-\subsection[Charaktere, die einfaches Geld suchen]{Charaktere, die einfaches Geld suchen und sich verteidigen können}
+\subsection*{Charaktere, die einfaches Geld suchen und sich verteidigen können}
 \textbf{Vanjescha Stoerrebrandt}, Leiterin des Kontors in \textbf{Tjolmar}, plant den Ausbau der Handelsstraße von Tjolmar nach \textbf{Riva}.
 Ihr Sekretär \textbf{Valpo Lucianus von Sturzbach} hat dafür vom Kontor in Lowangen eine Lieferung topographischer Geräte und eine Projektkasse mit 5.000 Dukaten für diverse Lohnarbeiten entgegengenommen und benötigt nun eine Eskorte.
 
-\absatz{Charaktere mit hohem Sozialstatus}
+\subsection*{Charaktere mit hohem Sozialstatus}
 Die Sprengung der Silberkrone, eines Berges im Rorwhed-Gebirge, durch ein Ritual eines orkischen Tairach-Schamanen sorgt für Unruhe unter den Führungskräften eurer Institution.
 Euer Vorgesetzter hat euch losgesandt, um einen versiegelten Brief an \textbf{Barngrimm Radobrecht}, den Großmeister des \textbf{Ordens der Grauen Stäbe} in Lowangen persönlich zu übergeben.
 
-\absatz{Naturverbundene Charaktere}
+\subsection*{Naturverbundene Charaktere}
 Euer Weg hat euch schon vor einer Weile nach \textbf{Lowangen} geführt.
 Zunächst angewidert von der lauten und engen Stadt habt ihr aber schon bald euren Platz als Beschützer und Heiler der wehrlosesten Bewohner gefunden: der Tiere.
 Zuletzt häufen sich aber verletzte Wildtiere unter euren Patienten, die im Norden der Stadt mit bereits älteren Verbrennungen gefunden werden.
 Einige der Städter erzählten euch von einem Vulkan, der die Natur in seiner Umgebung verwüstet.
 
 
-\subsection{Naturverbundene Magiebegabte}
+\subsection*{Naturverbundene Magiebegabte}
 Euer Zirkel hat von der Sprengung der Silberkrone und der Vernichtung des Tanzplatzes des örtlichen Hexenzirkels durch den orkische Tairach-Priester \textbf{Gushrogh Drughai} erfahren.
 Eurer Anführer hat euch daraufhin losgesandt, um Hilfe anzubieten.
 Zwar herrscht in der Region inzwischen Frieden zwischen Menschen und Orks und sogar eine vorsichtige Annäherung --
 allerdings sind besonders die lokalen Hexen noch skeptisch, ob dies auch für sie gilt.
 
-\subsection[Charaktere mit niedrigem Sozialstatus]{Charaktere mit niedrigem Sozialstatus und Bedarf an Geld}
+\neuespalte
+
+\subsection*{Charaktere mit niedrigem Sozialstatus und Bedarf an Geld}
 Das Leben während der Belagerung der Drughash-Orks (1031 BF) war für alle hart.
 Während der Adel auf seine sogenannte Ehre geachtet hat, hattet ihr nicht die Möglichkeiten für solchen Luxus.
 Also habt ihr für freies Geleit wichtiger Waren in die Stadt, manchen Ork mit Informationen über die Verteidigung versorgt.
@@ -67,7 +69,7 @@ In den Kneipen hört ihr Gerüchte über eine hohe Belohnung von der Torf-Compag
 
 \spaltenende
 
-\absatz{Wer weiß wovon?}
+\subsection*{Wer weiß wovon?}
 \tabelle{lXXXXX}{
 & Ascheregen, verletzte Tiere & Stoerrebrandt-Lieferung & Brief an den Großmeister & Hexen im Rorwhed & Wildschwein\-fässer \\
 Streuner &   & x &   &   & x \\
@@ -174,8 +176,6 @@ Anhand der Spuren um das Gehöft herum lassen sich Schlussfolgerungen über mög
 \textbf{IG 3:} Die Spuren weisen weniger auf einen Drachen hin, eher auf eine Art Feuerwesen, ein Elementar oder Dämon vielleicht, doch die magischen Spuren sind bereits verflogen.
 }
 
-\vfill
-
 \absatz{Der Qualmgeist}
 Die Helden können auf der Reise auch selbst schon mit dem \textbf{Qualmgeist} Bekanntschaft machen.
 Er wird in den meisten Nächten aktiv (1--4 auf W6) und lässt sich vom Wind ins Land tragen.
@@ -183,6 +183,8 @@ Hat er Opfer ausgemacht, fährt er vom Nachthimmel auf sie herab, umkreist die G
 Die Helden können ihn töten, ohne das Finale in Gefahr zu bringen (Kampfwerte und eine detailliertere Beschreibung auf S.\,\pageref{geist}).
 
 Noch ahnen nur die Hexen, dass die \textbf{Dryade} aus dem \textbf{Rorwhed} dahintersteckt.
+
+\zeichnung[0.3\textwidth]{reh.jpg}
 
 \newpage
 
@@ -208,6 +210,8 @@ Einige weitere ältere Gasthausbesucher kannten den alten \textbf{Jokmann} ebenf
 \textbf{IG 3:} Zwischen Rorwhed und Odenmoor lebt eine Goblinsippe, die von einer zaubermächtigen Schamanin angeführt wird.\\
 \textbf{IG 4:} Nach langen Nachfragen durch die Helden wird sich Strupp erinnern, dass er gesehen hat, wie Jokmann sich im Wald manchmal mit Goblins unterhalten hat.
 }
+
+\zeichnung{natur.png}
 
 \probenkasten[bild=magiekunde,
 zusammenarbeit=nein,
@@ -257,6 +261,8 @@ Das Geheimnis des Weins wird sie den Helden nur mit einer gelungenen Probe verra
 Nur mit einer zweiten Überredenprobe (Schwierigkeit 20) wird sie ihnen eine Karaffe übergeben.
 }
 
+\vfill
+
 \neuespalte
 
 \absatz{Hexen im Rorwhed}
@@ -275,8 +281,12 @@ Beide fürchten, dass der anhaltende Schmerz die Dryade zur Verwandlung zwingen 
 Beide möchten aber auch, dass diese Angelegenheit von den Hexen selbst geregelt wird.
 
 Sollten die Helden den Zirkeln von der inzwischen bereits aufgebrochenen Untersuchungseinheit der \textbf{Grauen Stäbe} berichten, werden sich die beiden Oberhexen zum Handeln gezwungen sehen.
-
 \spaltenende
+
+\zeichnung[0.8\textwidth]{Tierempath.JPG}
+
+
+
 
 \newpage
 \spaltenanfang
@@ -337,14 +347,14 @@ Die Verbindung der \textbf{Dryade} zu \textbf{Tairach}s Geisterwelt reißt ab un
     \kreaturinfo{Beschreibung und Verhalten}{In ihrer nächtlichen Form ist die Dryade stark vom Vulkanismus gezeichnet, dessen Glut an den Wurzeln ihres Baumes nagt. Ihre feingliedrige Gestalt verkohlt und wird umhüllt von einer dichten Qualmwolke, die die Nacht noch mehr verdunkelt und auf Mensch und Tiere hustenreizend und erstickend wirken kann. Sie hat keinen Zugriff mehr auf das Element Humus, sondern wirkt Zauber aus den Bereichen Feuer und Luft, um Unbelebtes in Brand zu setzen und Lebewesen zu ersticken.}
 }
 
-\vfill
-
 \abschnitt{Der Mühen Lohn}
 
 Nach Abschluss des Rituals bekommt jeder Held 30~EP.
 Wenn die Gruppe ihre Verletzungen noch nicht selbst behandelt hat, werden sich die \textbf{Hexen} der beiden Zirkel darum kümmern.
 Sie veranstalten außerdem eine schnelle Kollekte, bei welcher 20~Silber als Belohnung für die Gruppe herauskommen -- wenn die Helden noch Auftraggeber aus \textbf{Lowangen} mit ihrer Arbeit und ihren Ergebnissen zufriedenstellen konnten, lassen sich dort auch noch höhere Summen einstreichen. 
-
+\begin{center}
+\zeichnung[0.21\textwidth]{gold.png}
+\end{center}
 Hexer \textbf{Bringimox} drückt einem der Helden noch etwas in die Hand:
 Ein Vogelknochen, auf welchem ein Zauber liegt. Zerbricht man ihn, löst das einmalig einen \biglittlecap{Krähenruf} aus \emph{(Ilaris:134)}.
 Die \textbf{Dryade} kann zudem anbieten, von der Gruppe gesammelte Kräuter zu verzaubern, sodass sie lange frisch bleiben.
@@ -366,7 +376,8 @@ Eine fangemachte Karte des Svelltlandes findet sich im Blog von telling auf \hre
 
 
 
-\absatz{Tiere}
+\subsection[Tiere und Pflanzen]{Tiere}
+\label{svellt}
 	Die Tierwelt im Svelltland ist typisch für Nordaventurien und besonders von der Nähe zum \textbf{Orkland} geprägt,
 welches Tieren wie \textbf{Orklandhörnchen} und \textbf{-karnickel} den Namen gegeben hat.
 Dabei bietet das Land ganz unterschiedliche Lebensräume:
@@ -378,7 +389,7 @@ Erst abseits der Straßen im Wald findet man \textbf{Wildschweine}, \textbf{Stre
 
 \neuespalte
 
-\absatz{Pflanzen}
+\subsection*{Pflanzen}
 Das Abenteuer spielt im Frühsommer, sodass sich viele örtlichen Pflanzenarten bereits zeigen und manche können auch schon geerntet werden. Entlang der Straßen und auf den Wiesen fallen darunter am häufigsten \textbf{Gulmond}, \textbf{Tarnele} und \textbf{Wirselkraut}, etwas seltener auch \textbf{Zwölfblatt}.
 
 Am Waldrand hat man häufig Glück mit der \textbf{Vierblättrigen Einbeere}.
@@ -386,10 +397,11 @@ Am Waldrand hat man häufig Glück mit der \textbf{Vierblättrigen Einbeere}.
 Nahe Flussufern und in Sümpfen wachsen \textbf{Donf}, \textbf{Roter Drachenschlund} und \textbf{Traschbart}.
 
 \spaltenende
+\zeichnung{Wanderer.PNG}
 \neueseite
 \spaltenanfang
 
-\absatz{Kampfwerte}
+\subsection[Kampfwerte, NSCs und generische Namen]{Kampfwerte}
 
 \kreatur{Bandit}{Bandit}{humanoid}{
     \kreaturkampfwerte{4}{5}{4}{2}
@@ -408,7 +420,7 @@ Nahe Flussufern und in Sümpfen wachsen \textbf{Donf}, \textbf{Roter Drachenschl
 }
 
 
-\absatz{NSCs}
+\subsection*{NSCs}
 \unterabsatz{Lowangen}
 \begin{itemize}
     \item \textbf{Kontor Stoerrebrandt}
@@ -471,7 +483,7 @@ Nahe Flussufern und in Sümpfen wachsen \textbf{Donf}, \textbf{Roter Drachenschl
     \end{itemize}
 
 \info{
-    \absatz{Generische Namen}
+    \subsection*{Generische Namen}
     \textbf{weiblich:}
     Dramina Gesse, Glenna Fassmacherin, Ilke Gerrholt, Traute Netzknüpferin \\
     \textbf{männlich:}
@@ -518,7 +530,7 @@ Nachdem das Glas eilig aufgefüllt wurde, breitete sich Gemurmel in der Schankst
 \enquote{Ob diese wandernden Fässer im Wald mit Jokmanns legendärem Wein zu tun haben?}\\
 \enquote{Irgendetwas muss es damit auf sich haben, warum sonst sollte die Torfkompagnie eine Belohnung auf die Fässer ausgerufen haben?}
 
-
+\vfill
 
 \absatz{Eigenheiten der Archetypen}
 
