--- a/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
+++ b/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
@@ -83,6 +83,9 @@ Wie du sicherlich bemerkt hast, haben die Helden hier nicht wirklich eine Wahl, 
 	Sofort seid ihr losgeeilt und eine ab und an sichtbare Fährte aus Bluttropfen führte euch immer höher ins Gebirge.
 	Schließlich endete die Spur in einem dunklen Höhleneingang.}
 \spaltenende
+\begin{center}
+\zeichnung[0.6\textwidth]{pferd.jpg}
+\end{center}
 \newpage
 
 \spaltenanfang
@@ -310,6 +313,8 @@ Zelebriere in diesem Falle die Dramatik und nutze die Situation, wenn möglich, 
 Auf diese Weise hast du direkt einen perfekten Aufhänger für dein Folgeabenteuer:
 die Flucht aus den Fängen der Orks!
 }
+
+\neuespalte
 
 Gelangen die Helden hingegen zusammen mit dem Knappen an die Oberfläche, haben sie das Abenteuer bestanden und erhalten im Gut Nebelstein von der Ritterin \textit{Wahntraude von Rebenich} (vernarbtes Gesicht, raue Stimme, Geldsorgen) zum Dank jeweils 3~Dukaten. Zudem können sie sich je 100~Abenteuerpunkte notieren und erhalten 20~Bonus-EP, falls sie Greifax als Verbündeten gewonnen haben.
 
